# LLM-Building-Pipeline

./: README.md  pyproject.toml
Data/: Ramayan.txt
Pretraining-Phase/: GPT.py  config.py  config.yaml  generation.py  tokenizer.py  trainer.py  utils.py
Pretraining-Phase/MOE/: Gate.py  MOE.md  MixtureofExperts.py  Test_MOE.py
Pretraining-Phase/Notebooks/: GPT_training.ipynb  V2.ipynb  architecture.ipynb
Pretraining-Phase/gptv1/: GPT.py  multi-head.py
Pretraining-Phase/gptv2/: Cache.py  FFN.py  GPTV2.py  layerNorm.py  transformer_block.py
